fixed element spacing on desktop

--- a/public/hexdraw.css
+++ b/public/hexdraw.css
@@ -136,10 +136,12 @@ a:active {
 
 .utility-item
 {
-	display:inline;
+	
+	display:block;
+	float:left;
 	text-align:center;
 	line-height:50px;
-	float:right;
+	
 	background-size:contain;
 	border-style:solid;
 	border-width:5px;
@@ -155,6 +157,7 @@ a:active {
 
 .utility-item.mobile{
 	font-size: 1em;
+	float:right;
 	line-height:30px;
 	width:40px;
 	height:40px;
